# Sundai_LaundryAlert

./: .gitignore  README.md
device_code/: install-codec.sh  install-python.sh  recorder.py  setup_codec_zero.sh
frontend_code/: .gitignore  package.json
frontend_code/app/: page.tsx
frontend_code/app/api/laundry-events/: route.ts
frontend_code/components/dashboard/: laundry-events-card.tsx  monitor-card.tsx  recent-activity-card.tsx  system-health-card.tsx
terraform_code/: .terraform.lock.hcl  SPEC.md  dynamodb.tf  lambda.tf  locals.tf  providers.tf  pyproject.toml  requirements-dev.txt  s3.tf  variables.tf
terraform_code/lambdas/processor/: audio_processor.py  lambda_function.py  requirements.txt
terraform_code/tests/: conftest.py  test_classifier.py  test_edge_cases.py  test_handler.py  test_robustness.py  test_samples.py
